# solver_ws1s

./: CMakeLists.txt  Makefile  README.md  doxy.config
benchmark/basic/: basic-int00.mona
benchmark/horn-sub/: horn_sub02.mona
benchmark/presburger/: presburger-02.mona
benchmark/strand-adv/: strand-new-bubblesort-else.mona  strand-new-bubblesort-if-else.mona  strand-new-sorted-list-insert-after-loop.mona  strand-new-sorted-list-insert-before-head.mona  strand-new-sorted-list-insert-before-loop.mona  strand-new-sorted-list-insert-error-error.mona  strand-new-sorted-list-insert-in-loop.mona  strand-new-sorted-list-reverse-after-loop.mona  strand-new-sorted-list-reverse-before-loop.mona  strand-new-sorted-list-reverse-in-loop.mona  strand-new-sorted-list-search-after-loop.mona  strand-new-sorted-list-search-before-loop.mona
doc/html/: annotated.html  classes.html  dir_0a202ab5d5e9116561a7ff2af04b973d.html  dir_0b52b318fc70a28bf2b33ab7dee73cb4.html  dir_0c352b6c62c3335f85e2bc79f0d3bf0d.html  dir_0f38ab3bb62a342715a9380f835bbc1b.html  dir_1cffe2f988bcb97978d068a9a9762d25.html  dir_1d05bb84e1fc79ae5f76ec50d6e59353.html  dir_203e5988f1ed315d29383d699972de6f.html  dir_23db65114aa5ac84eecb58b77df82192.html  dir_25cb3d4c0c0459d3d4058e2f45a1fe8a.html  dir_25ee45794ad75b2b232ce0e17838701e.html  dir_2802a3b175043ccabdbd92d9392ddf84.html  dir_2e4715b3a9ab32f024bdbf5e57759264.html  dir_31456fe61cf1c8b2391c08c103edb5ee.html  dir_33c80f5793b601c64c4d191eccfdba28.html  dir_33dd55bac7ea3889fc8df7c5a391b302.html  dir_383f29417644d6ddefc41d904ff86916.html  dir_3a99237c8c8fb70def47a38c0564a0dc.html  dir_3ca7b39f75d39072a1d560595b82eb6c.html  dir_3ce5e5f4125fe44aab86ee00e904358b.html  dir_3d231c43c240056b2bd74bd13d7f9db7.html  dir_3de465cb625f66eb79e35328827b8616.html  dir_4219f2738480440ff2cc523931cb7ce8.html  dir_423dace3d36730b887fe8742e10acb3c.html  dir_4a4ab4ae129643df3dc94a667e11d2a7.html  dir_4dad16015d8b624e10d3ceba61e7c927.html  dir_4e69d9dc2dfbd1c4cc8cfe6810ba3fd9.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_55b7a54491813c6af261b794275f855a.html  dir_56aba1fdc2477c31abad7d1e57fb98cd.html  dir_59dea3c090f49a7b86524a450a229071.html  dir_5a3a3468a770aad86cb4bba485661ac5.html  dir_5ca5b826dfae53164c2a0b142ed087c5.html  dir_62582476398b118c4b1af11d24261508.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_64929f1cc29bcbba07df2b3e223f4c8d.html  dir_650164f7bb9482bdca38d1df7d9c73fd.html  dir_6577ebd176a1cad31a2ded9950a38800.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+57 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+39 more)
dot/: aut.dot
include/: binary_relation.hh  explicit_lts.hh  nfa-algorithms.hh  shared_counter.hh  smart_set.hh  splitting_relation.hh  synchronized-iterator.hh  transl_weak.hh  two_way_dict.hh  util.hh
src/: main.cpp
src/ast/: ast.cpp  ast.h  astdump.cpp  ident.h  parser.cpp  parser.ypp  predlib.h  scanner.cpp  scanner.lpp  symboltable.cpp  untyped.cpp  untyped.h
src/core/: atomaut.cpp  atomaut.h  auxiliary.cpp  auxiliary.h  eval.cpp  eval.h  gencode.cpp  unused.cpp  unused.h
src/mata/: explicit_lts_sim.cc  inter-aut.cc  inter-aut.hh  nfa-complement.cc  nfa-concatenation.cc  nfa-intersection.cc  nfa.cc  nfa.hh  parser.cc  parser.hh
thesis/: projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt.tex
(+718 files in other folders)
